src/components/Details/index.module.css
.title_box {
  @apply w-[90%] rounded-3xl mx-auto h-[320px] mt-28 mb-8 overflow-y-hidden relative border;
}

.launch_img {
  @apply mx-auto z-0 mt-4 w-52 h-52;
}

.glass_div {
  @apply absolute top-0 left-0 right-0 bottom-0 z-[1] bg-glass-gradient;
}

.glass_div > h2 {
  @apply text-center pt-64 text-4xl;
}

.info_box {
  @apply flex justify-around gap-6 items-center flex-col w-full py-6 sm:flex-row sm:items-start sm:gap-0;
}

.info_box p {
  @apply text-lg;
}

.youtube {
  @apply w-full h-[30rem] py-20 mx-auto flex flex-col items-center sm:w-[40rem] sm:h-[35rem];
}

.crew_card {
  @apply w-56 h-60 bg-glass-gradient rounded-lg border relative;
}

